<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/upload"
        android:icon="@drawable/baseline_photo_white_24"
        app:showAsAction="ifRoom"
        android:title="@string/edit_upload">
        <menu>
            <item
                android:id="@+id/camera"
                android:title="@string/upload_camera"/>
            <item
                android:id="@+id/album"
                android:title="@string/upload_album"/>
            <item
                android:id="@+id/url"
                android:title="@string/upload_url"/>
        </menu>
    </item>
    <item
        android:id="@+id/save"
        android:icon="@drawable/baseline_done_white_24"
        app:showAsAction="ifRoom"
        android:title="@string/edit_save">
    </item>
</menu>